# MukkiGamesEngine

./: .gitattributes  .gitignore  AGENTS.md  README.md  agent.md
.github/: copilot-instructions.md
.zed/: debug.json
Main/: .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  imgui.ini
Main/MukkiGamesEngine/: CMakeLists.txt  MukkiGamesEngine.cpp  MukkiGamesEngine.h
Main/MukkiGamesEngine/Assets/: scene.json  sceneTrack.json  showRoom.json  studio_small.hdr
Main/MukkiGamesEngine/Assets/Car_Model/: license.txt  scene.gltf
Main/MukkiGamesEngine/Assets/GTR/: license.txt  scene.gltf
Main/MukkiGamesEngine/Assets/Race_Track/: scene.gltf
Main/MukkiGamesEngine/Assets/ShowRoom/: scene.gltf
Main/MukkiGamesEngine/Renderer/: Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h
Main/MukkiGamesEngine/Shaders/: brdf.slang  compute.comp  rt.rchit  rt.rgen  rt.rmiss  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  taa.comp
Main/MukkiGamesEngine/vulkan/: CommandBufferManager.cpp  CommandBufferManager.h  HelperFunction.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h  pipeline.cpp  pipeline.h
Main/MukkiGamesEngine/vulkan/Core/: Device.h  EngineWindow.cpp  EngineWindow.h  FileUtils.h  Instance.h  ShaderCompiler.cpp  ShaderCompiler.h  SwapChain.cpp  SwapChain.h  VkApplication.cpp  VkApplication.h  VkDevice.cpp  VkDevice.h  VkInstance.cpp  VkInstance.h
Main/MukkiGamesEngine/vulkan/Descriptors/: VkDescriptor.cpp  VkDescriptor.h
Main/MukkiGamesEngine/vulkan/Physics/: PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  PhysicsEngine.cpp  PhysicsEngine.h  VehiclePhysics.cpp  VehiclePhysics.h
Main/MukkiGamesEngine/vulkan/Resources/: BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  DeletionQueue.cpp  DeletionQueue.h  ObjectLoader.cpp  ObjectLoader.h  SceneLoader.cpp  SceneObject.h  Sceneloader.h  ShadowMap.cpp  ShadowMap.h  SkyBox.cpp  SkyBox.h  TextureManager.cpp  TextureManager.h  ThreadPool.cpp  ThreadPool.h
Main/MukkiGamesEngine/vulkan/objects/: UBO.h  bitmap.h  lights.h  vertex.h
Main/MukkiGamesEngine/vulkan/pipeline/: ComputePipeline.cpp  computePipeline.h
Main/MukkiGamesEngine/vulkan/raytracing/: RayTracingAS.cpp  RayTracingAS.h  RayTracingPipeline.cpp  RayTracingPipeline.h
Main/MukkiGamesEngine/vulkan/uiManager/: uiManager.cpp  uiManager.h  uiThemes.h
Main/MukkiGamesEngine/vulkan/utils/: ect_cubemap.cpp  ect_cubemap.h  utils.h
Main/conan_profiles/: linux-gcc
glsl Main/MukkiGamesEngine/Shaders/: test.frag  test.vert
